--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Signika:wght@300;400;500;600;700&display=swap");
 /*Enlever style input number*/
 /* Firefox */
+@import url("https://fonts.googleapis.com/css2?family=Signika:wght@300;400;500;600;700&display=swap");
 input[type=number] {
   -moz-appearance: textfield;
 }
@@ -32,6 +32,10 @@ body {
 
 .grey {
   color: #898989;
+}
+
+.white {
+  color: #ffffff;
 }
 
 .nav_index ul {
@@ -110,6 +114,35 @@ body {
 .slogan_index p {
   max-width: 300px;
   text-align: center;
+}
+
+.nav_signin .nav_right a {
+  margin: 0 25px 0 0px;
+}
+.nav_signin .nav_right .link_signin {
+  color: #F24646;
+  opacity: 70%;
+  transition: 0.25s;
+}
+.nav_signin .nav_right .link_signin:hover {
+  opacity: 100%;
+}
+.nav_signin .nav_right .link_signup {
+  color: #898989;
+  transition: 0.25s;
+}
+.nav_signin .nav_right .link_signup:hover {
+  color: #F24646;
+  opacity: 70%;
+}
+
+.signin_div {
+  margin: 0 0 25px 30px;
+  background-color: red;
+}
+
+#submit_signin {
+  margin-top: 10px;
 }
 
 .nav_form ul {
@@ -260,35 +293,6 @@ body {
   width: 500px;
 }
 
-.nav_signin .nav_right a {
-  margin: 0 25px 0 0px;
-}
-.nav_signin .nav_right .link_signin {
-  color: #F24646;
-  opacity: 70%;
-  transition: 0.25s;
-}
-.nav_signin .nav_right .link_signin:hover {
-  opacity: 100%;
-}
-.nav_signin .nav_right .link_signup {
-  color: #898989;
-  transition: 0.25s;
-}
-.nav_signin .nav_right .link_signup:hover {
-  color: #F24646;
-  opacity: 70%;
-}
-
-.signin_div {
-  margin: 0 0 25px 30px;
-  background-color: red;
-}
-
-#submit_signin {
-  margin-top: 10px;
-}
-
 .nav_app ul {
   display: flex;
   align-items: center;
@@ -348,25 +352,262 @@ body {
 
 .all_app {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: repeat(11, 1fr);
+  grid-template-rows: repeat(10, 150px);
+  margin-top: 50px;
 }
 
-.session_calendar {
+.day_session {
+  display: grid;
+  color: #ffffff;
+  background-color: #272727;
+  border-radius: 20px;
+  grid-area: 1/3/4/5;
+  min-width: 250px;
+}
+.day_session p {
+  margin: 0 0 5px 15px;
+  font-size: 17px;
+  text-align: center;
+}
+.day_session .form_day_session {
+  height: 100%;
+}
+.day_session .form_day_session .label_and_select {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  color: #F24646;
+}
+.day_session .form_day_session input {
+  border: none;
+  outline: none;
+}
+.day_session .form_day_session .duo_label {
+  display: flex;
+  padding: 30px 30px 0 30px;
+}
+.day_session .form_day_session .duo_label .input_and_label {
+  position: relative;
+  margin-right: 15px;
+  width: 50%;
+}
+.day_session .form_day_session .input_and_label {
+  position: relative;
+  background-color: #121212;
+  border-radius: 20px;
+  height: 55px;
+  overflow: hidden;
+}
+.day_session .form_day_session .input_and_label input {
+  position: absolute;
+  bottom: 2px;
+  left: 20px;
+  height: 50%;
+  width: calc(100% - 40px);
+  background-color: #121212;
+  opacity: 100%;
+  color: #ffffff;
+}
+.day_session .form_day_session .input_and_label label {
+  position: absolute;
+  left: -50%;
+  top: 5px;
+}
+.day_session .form_day_session .signup_div {
+  margin: 0 0 45px 30px;
+}
+.day_session .form_day_session .password_conditions {
+  position: absolute;
+  display: flex;
+  width: 460px;
+  justify-content: space-around;
+  transform: translateY(-55px);
+  color: #898989;
+  font-size: 14px;
+}
+.day_session .form_day_session .submit_div {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+.day_session .form_day_session .submit_style {
+  background-color: #F24646;
+  color: #ffffff;
+  padding: 7px 14px;
+  border-radius: 20px;
+  cursor: pointer;
+  transform: translateY(-20px);
+  transition: 0.25s;
+  font-size: 15px;
+}
+.day_session .form_day_session .submit_style:hover {
+  background-color: #AF1717;
+}
+.day_session .label_center {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 100%;
+}
+.day_session .label_center .input_and_label {
+  position: relative;
+  background-color: #121212;
+  border-radius: 20px;
+  height: 55px;
+  min-width: 200px;
+  max-width: 300px;
+  overflow: hidden;
+}
+.day_session .label_center .input_and_label input {
+  position: absolute;
+  bottom: 2px;
+  left: 20px;
+  height: 50%;
+  width: calc(100% - 40px);
+  background-color: #121212;
+  opacity: 100%;
+  color: #ffffff;
+}
+.day_session .label_center .input_and_label label {
+  position: absolute;
+  left: 20px;
+  top: 5px;
+  color: #F24646;
+}
+.day_session .label_center .input_and_label .more_logo {
+  position: absolute;
+  color: #F24646;
+  font-size: 25px;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-20%);
+}
+.day_session .label_center #submit_day_session {
+  margin-top: 20px;
+}
+
+.day_recap {
+  display: grid;
+  grid-area: 1/6/4/10;
+  border-radius: 20px;
+  overflow-y: scroll;
+}
+.day_recap p {
+  margin: 0 0 5px 15px;
+  font-size: 17px;
+}
+.day_recap .all_contain {
+  background-color: #272727;
+  border-radius: 20px;
+  color: #ffffff;
+  padding: 25px 0px;
+  flex-wrap: wrap;
+}
+.day_recap .all_contain h2 {
+  margin: 0;
+  text-align: center;
+}
+.day_recap .all_contain .empty_session_text {
+  text-align: center;
+  margin: 10px 0 0 0;
+}
+.day_recap .all_for_muscle {
+  display: flex;
+  justify-content: space-around;
+}
+.day_recap .all_for_muscle .all_for_muscle_solo {
+  height: 100%;
+}
+.day_recap .all_for_muscle .all_for_muscle_solo h3 {
+  font-size: 20px;
+  margin-left: 15px;
+}
+.day_recap .all_for_muscle .all_for_muscle_solo .title_exercise {
+  font-size: 16px;
+  text-decoration: underline #F24646;
+}
+.day_recap .all_for_muscle .all_for_muscle_solo .title_exercise:before {
+  /*content: "";*/
+  position: absolute;
+  bottom: 0;
+  transform: translateY(3px);
+  width: 100%;
+  height: 2px;
+  background-color: #F24646;
+}
+.day_recap .all_for_muscle .all_for_muscle_solo .line_exercise {
+  display: flex;
+}
+.day_recap .all_for_muscle .all_for_muscle_solo .line_exercise p {
+  font-size: 13px;
+  margin-right: 10px;
+}
+
+.this_weight {
+  background-color: #272727;
+  color: #ffffff;
+  grid-area: 4/4/5/5;
+  text-align: center;
+  margin: 10px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 130px;
+}
+.this_weight .this_weight_title {
+  font-size: 13px;
+}
+.this_weight .this_weight_value {
+  font-size: 30px;
+  transform: translateY(-15px);
+}
+.this_weight .div_this_weigth {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.last_weight {
+  background-color: #272727;
+  color: #ffffff;
+  grid-area: 4/3/5/4;
+  text-align: center;
+  margin: 10px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 130px;
+}
+.last_weight .last_weight_title {
+  font-size: 13px;
+}
+.last_weight .last_weight_value {
+  font-size: 30px;
+  transform: translateY(-15px);
+}
+.last_weight .div_last_weigth {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.session_calendar {
+  grid-area: 4/6/7/10;
+  margin-top: 10px;
+}
 .session_calendar .calendar {
   display: grid;
-  grid-template-columns: repeat(7, 40px);
-  width: 280px;
-  grid-template-rows: repeat(6, 40px);
-  height: 240px;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(6, 1fr);
   background-color: #272727;
   border: 1px solid black;
   border-radius: 20px;
   overflow: hidden;
+  margin-top: 10px;
 }
 .session_calendar .calendar .calendar_child {
   color: #ffffff;
@@ -377,207 +618,15 @@ body {
   cursor: pointer;
 }
 .session_calendar .calendar .calendar_child:hover {
-  background-color: #F24646;
+  background-color: #F24646 !important;
   transition: 0.1s;
 }
-
-.day_session_and_recap {
-  display: flex;
-  justify-content: space-around;
-}
-.day_session_and_recap .day_session {
-  margin-top: 75px;
+.session_calendar .calendar .calendar_child:hover p {
   color: #ffffff;
-  grid-area: 1/1/2/4;
-}
-.day_session_and_recap .day_session p {
-  margin: 0 0 5px 15px;
-  font-size: 17px;
-  text-align: center;
-}
-.day_session_and_recap .day_session .form_day_session {
-  background-color: #272727;
-  border-radius: 20px;
-  width: 300px;
-}
-.day_session_and_recap .day_session .form_day_session .label_and_select {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  color: #F24646;
-}
-.day_session_and_recap .day_session .form_day_session .label_and_select select {
-  width: 200px;
-}
-.day_session_and_recap .day_session .form_day_session input {
-  border: none;
-  outline: none;
-}
-.day_session_and_recap .day_session .form_day_session .duo_label {
-  display: flex;
-  padding: 30px 30px 0 30px;
-}
-.day_session_and_recap .day_session .form_day_session .duo_label .input_and_label {
-  position: relative;
-  margin-right: 15px;
-  width: 50%;
-}
-.day_session_and_recap .day_session .form_day_session .input_and_label {
-  position: relative;
-  background-color: #121212;
-  border-radius: 20px;
-  height: 55px;
-  overflow: hidden;
-}
-.day_session_and_recap .day_session .form_day_session .input_and_label input {
-  position: absolute;
-  bottom: 2px;
-  left: 20px;
-  height: 50%;
-  width: calc(100% - 40px);
-  background-color: #121212;
-  opacity: 100%;
-  color: #ffffff;
-}
-.day_session_and_recap .day_session .form_day_session .input_and_label label {
-  position: absolute;
-  left: -50%;
-  top: 5px;
-}
-.day_session_and_recap .day_session .form_day_session .signup_div {
-  margin: 0 0 45px 30px;
-}
-.day_session_and_recap .day_session .form_day_session .password_conditions {
-  position: absolute;
-  display: flex;
-  width: 460px;
-  justify-content: space-around;
-  transform: translateY(-55px);
-  color: #898989;
-  font-size: 14px;
-}
-.day_session_and_recap .day_session .form_day_session .submit_div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.day_session_and_recap .day_session .form_day_session .submit_style {
-  background-color: #F24646;
-  color: #ffffff;
-  padding: 7px 14px;
-  border-radius: 20px;
-  cursor: pointer;
-  transform: translateY(-20px);
-  transition: 0.25s;
-  font-size: 15px;
-}
-.day_session_and_recap .day_session .form_day_session .submit_style:hover {
-  background-color: #AF1717;
-}
-.day_session_and_recap .day_session .label_center {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.day_session_and_recap .day_session .label_center .input_and_label {
-  position: relative;
-  background-color: #121212;
-  border-radius: 20px;
-  height: 55px;
-  width: 200px;
-  overflow: hidden;
-}
-.day_session_and_recap .day_session .label_center .input_and_label input {
-  position: absolute;
-  bottom: 2px;
-  left: 20px;
-  height: 50%;
-  width: calc(100% - 40px);
-  background-color: #121212;
-  opacity: 100%;
-  color: #ffffff;
-}
-.day_session_and_recap .day_session .label_center .input_and_label label {
-  position: absolute;
-  left: 20px;
-  top: 5px;
-  color: #F24646;
-}
-.day_session_and_recap .day_session .label_center .input_and_label .more_logo {
-  position: absolute;
-  color: #F24646;
-  font-size: 25px;
-  right: 10px;
-  top: 50%;
-  transform: translateY(-20%);
-}
-.day_session_and_recap .day_session .label_center div {
-  margin: 20px;
-}
-.day_session_and_recap .day_session .label_center #submit_day_session {
-  margin-top: 20px;
-}
-.day_session_and_recap .day_recap {
-  width: 500px;
-  margin-top: 75px;
-  border-radius: 20px;
-}
-.day_session_and_recap .day_recap p {
-  margin: 0 0 5px 15px;
-  font-size: 17px;
-}
-.day_session_and_recap .day_recap .all_contain {
-  background-color: #272727;
-  border-radius: 20px;
-  color: #ffffff;
-  padding: 25px 0px;
-  flex-wrap: wrap;
-}
-.day_session_and_recap .day_recap .all_contain h2 {
-  margin: 0;
-  text-align: center;
-}
-.day_session_and_recap .day_recap .all_contain .empty_session_text {
-  text-align: center;
-  margin: 10px 0 0 0;
-}
-.day_session_and_recap .day_recap .all_for_muscle {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  justify-content: space-around;
-  align-items: center;
-}
-.day_session_and_recap .day_recap .all_for_muscle .all_for_muscle_solo {
-  height: 100%;
-}
-.day_session_and_recap .day_recap .all_for_muscle .all_for_muscle_solo h3 {
-  font-size: 20px;
-  margin-left: 15px;
-}
-.day_session_and_recap .day_recap .all_for_muscle .all_for_muscle_solo .title_exercise {
-  font-size: 16px;
-  text-decoration: underline #F24646;
-}
-.day_session_and_recap .day_recap .all_for_muscle .all_for_muscle_solo .title_exercise:before {
-  /*content: "";*/
-  position: absolute;
-  bottom: 0;
-  transform: translateY(3px);
-  width: 100%;
-  height: 2px;
-  background-color: #F24646;
-}
-.day_session_and_recap .day_recap .all_for_muscle .all_for_muscle_solo .line_exercise {
-  display: flex;
-}
-.day_session_and_recap .day_recap .all_for_muscle .all_for_muscle_solo .line_exercise p {
-  font-size: 13px;
-  margin-right: 10px;
 }
 
 .weight {
-  display: flex;
+  display: none;
 }
 .weight .weight_last_week {
   width: 150px;
@@ -624,10 +673,6 @@ body {
 .weight .weight_this_week .box_weight p {
   max-width: 100px;
   font-size: 35px;
-}
-
-#muscle_selects {
-  background-color: red;
 }
 
 .delete_logo {
