--- a/style.css
+++ b/style.css
@@ -116,6 +116,48 @@ body {
   text-align: center;
 }
 
+@media screen and (max-width: 450px) {
+  .nav_index ul {
+    justify-content: space-around;
+  }
+  .nav_index ul div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .nav_index ul div a {
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 14px;
+  }
+  .nav_index ul .nav_left a {
+    font-size: 16px;
+    font-weight: 600;
+    transition: 0.25s;
+  }
+  .nav_index ul .nav_left a:hover {
+    opacity: 70%;
+  }
+  .nav_index ul .nav_right {
+    position: static;
+    display: flex;
+  }
+  .nav_index ul .nav_right a {
+    margin: 5px 0px;
+  }
+  .nav_index ul .nav_right li {
+    margin: 0 10px;
+  }
+  .nav_index ul .nav_right .link_signin {
+    background-color: #F24646;
+    padding: 3px 6px;
+    border-radius: 20px;
+    transition: 0.25s;
+  }
+  .nav_index ul .nav_right .link_signin:hover {
+    background-color: #AF1717;
+  }
+}
 .nav_signin .nav_right a {
   margin: 0 25px 0 0px;
 }
@@ -145,6 +187,22 @@ body {
   margin-top: 10px;
 }
 
+@media screen and (max-width: 650px) {
+  .nav_form ul {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .nav_form ul .nav_left {
+    transform: translateX(-20px);
+  }
+
+  .signin_form {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+  }
+}
 .nav_form ul {
   display: flex;
   align-items: center;
@@ -224,25 +282,25 @@ body {
   width: 340px;
 }
 
-.form_test input {
+.form_signup_and_signin input {
   border: none;
   outline: none;
 }
-.form_test .duo_label {
+.form_signup_and_signin .duo_label {
   display: flex;
 }
-.form_test .duo_label .input_and_label {
+.form_signup_and_signin .duo_label .input_and_label {
   margin: 15px 0 45px 30px;
   width: 220px;
 }
-.form_test .input_and_label {
+.form_signup_and_signin .input_and_label {
   position: relative;
   background-color: #272727;
   border-radius: 20px;
   height: 50px;
   overflow: hidden;
 }
-.form_test .input_and_label input {
+.form_signup_and_signin .input_and_label input {
   position: absolute;
   bottom: 2px;
   left: 20px;
@@ -252,16 +310,16 @@ body {
   opacity: 100%;
   color: #ffffff;
 }
-.form_test .input_and_label label {
+.form_signup_and_signin .input_and_label label {
   position: absolute;
   left: 20px;
   top: 5px;
   color: #898989;
 }
-.form_test .signup_div {
+.form_signup_and_signin .signup_div {
   margin: 0 0 45px 30px;
 }
-.form_test .password_conditions {
+.form_signup_and_signin .password_conditions {
   position: absolute;
   display: flex;
   width: 460px;
@@ -270,12 +328,12 @@ body {
   color: #898989;
   font-size: 14px;
 }
-.form_test .submit_div {
+.form_signup_and_signin .submit_div {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.form_test .submit_style {
+.form_signup_and_signin .submit_style {
   background-color: #F24646;
   color: #ffffff;
   padding: 7px 14px;
@@ -285,7 +343,7 @@ body {
   transition: 0.25s;
   font-size: 15px;
 }
-.form_test .submit_style:hover {
+.form_signup_and_signin .submit_style:hover {
   background-color: #AF1717;
 }
 
@@ -293,6 +351,15 @@ body {
   width: 500px;
 }
 
+@media screen and (max-width: 650px) {
+  .signup_form {
+    width: 80vw;
+  }
+
+  .form_signup_and_signin .password_conditions {
+    width: 80vw;
+  }
+}
 .nav_app ul {
   display: flex;
   align-items: center;
@@ -493,13 +560,13 @@ body {
   grid-area: 1/6/4/10;
   border-radius: 20px;
   overflow-y: scroll;
+  background-color: #272727;
 }
 .day_recap p {
   margin: 0 0 5px 15px;
   font-size: 17px;
 }
 .day_recap .all_contain {
-  background-color: #272727;
   border-radius: 20px;
   color: #ffffff;
   padding: 25px 0px;
@@ -691,11 +758,19 @@ body {
   transform: translateX(-50%) translateY(-50%);
 }
 
-@media screen and (max-width: 850px) {
-  .all_contain {
-    width: 300px;
+@media screen and (max-width: 1050px) {
+  body {
+    background-color: green;
   }
 
+  .day_recap {
+    min-width: 300px;
+  }
+  .day_recap .all_contain {
+    width: 280px;
+  }
+}
+@media screen and (max-width: 850px) {
   .day_session_and_recap {
     justify-content: space-around;
   }
